# terminal_commu

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.superpowers/sdd/: final-fix-report.md
docs/superpowers/plans/: 2026-07-03-fmk-terminal-reader.md  2026-07-07-final-review-fixes.md  2026-07-07-multi-community-adapters.md  2026-07-08-commu-product-rename.md  2026-07-08-public-github-distribution.md
docs/superpowers/specs/: 2026-07-03-fmk-terminal-reader-design.md  2026-07-07-multi-community-adapters-design.md  2026-07-08-commu-product-rename-design.md  2026-07-08-public-github-distribution-design.md  2026-07-13-playwright-docker-fetching-design.md
src/commu/: __main__.py  app.py  browser.py  client.py  errors.py  explorer.py  launcher.py  media.py  parser.py  paths.py  service.py  styles.tcss  targets.py  url_history.py  work_disguise.py
src/commu/adapters/: __init__.py  arca.py  base.py  dcinside.py  fmk.py
src/fmk_reader/: __main__.py  app.py  cache.py  client.py  errors.py  launcher.py  models.py  parser.py  service.py  styles.tcss  targets.py
src/fmk_reader/adapters/: __init__.py  arca.py  base.py  dcinside.py  fmk.py
tests/: test_adapters.py  test_app.py  test_arca_adapter.py  test_cache.py  test_cli.py  test_client.py  test_dcinside_adapter.py  test_launcher.py  test_models.py  test_packaging.py  test_parser.py  test_service.py  test_targets.py
tests/fixtures/: arca_board.html  arca_post.html  board.html  dc_board.html  dc_post.html  post.html
