[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmk-reader"
version = "0.1.0"
description = "Read FMKorea football_world in a terminal"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beautifulsoup4>=4.14,<5",
  "httpx>=0.28,<0.29",
  "textual>=8.2,<9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[project.scripts]
fmk = "fmk_reader.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fmk_reader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
